<resources>
    <string name="app_name">Contacts</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Contact_Name">Contact Name</string>
    <string name="Contact_Phone">Contact Phone</string>
    <string name="add">Add</string>
    <string name="call">Call</string>
    <string name="text">Text</string>
    <string name="video">Video</string>
    <string name="contact_info">Contact info</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="add_photo">Add Photo</string>
    <string name="name">Name</string>
    <string name="Phone">Phone</string>
    <string name="save">Save</string>
    <string name="jobTitle">JobTitle</string>
    <string name="e_mail">Email</string>
</resources>