<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.AddContact">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/g_line"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ContactImg"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_140sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_add_photo"
        android:padding="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_28sdp"/>

    <TextView
        android:id="@+id/add_photo_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/ContactImg"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/add_photo"
        android:textColor="@color/black"
        android:textSize="@dimen/_16ssp"
        android:textStyle="bold"
        android:layout_marginTop="@dimen/_5sdp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Add_Name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/add_photo_text"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidthFocused="@dimen/_2sdp"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:enabled="true"
        android:outlineSpotShadowColor="@color/brown"
        android:hint="@string/name"
        android:textColorHint="@color/brown"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        android:layout_margin="@dimen/_15sdp"
        tools:targetApi="p">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:inputType="textPersonName"
            android:textColor="@color/brown"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Add_Phone_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Add_Name_txt"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidthFocused="@dimen/_2sdp"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:outlineSpotShadowColor="@color/brown"
        android:hint="@string/Phone"
        android:textColorHint="@color/brown"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        android:layout_margin="@dimen/_15sdp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/brown"
            android:inputType="phone"
            android:maxLength="11"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Add_jobTitle_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Add_Phone_txt"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidthFocused="@dimen/_2sdp"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:outlineSpotShadowColor="@color/brown"
        android:hint="@string/jobTitle"
        android:textColorHint="@color/brown"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        android:layout_margin="@dimen/_15sdp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/brown"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/Add_Mail_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Add_jobTitle_txt"
        app:layout_constraintStart_toStartOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeWidth="@dimen/_2sdp"
        app:boxStrokeColor="@color/brown"
        app:boxStrokeWidthFocused="@dimen/_2sdp"
        app:shapeAppearance="@style/ShapeAppearance.MaterialComponents.SmallComponent"
        android:outlineSpotShadowColor="@color/brown"
        android:hint="@string/e_mail"
        android:textColorHint="@color/brown"
        app:expandedHintEnabled="false"
        app:hintAnimationEnabled="true"
        android:layout_margin="@dimen/_15sdp">


        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            android:textColor="@color/brown"
            android:inputType="textEmailAddress"/>

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/Add_Mail_txt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_15sdp"
        android:background="@drawable/background_btn"
        android:text="@string/add"
        android:textSize="@dimen/_18sdp"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:backgroundTint="@color/brown"/>


</androidx.constraintlayout.widget.ConstraintLayout>