<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.ContactDetails">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/contact_img"
        android:layout_width="@dimen/_70sdp"
        android:layout_height="@dimen/_70sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_28sdp"
        android:src="@drawable/ic_person"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/contact_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contact_img"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="@dimen/_28sdp"
        tools:text="Broooo"
        android:textSize="@dimen/_28ssp"
        android:textColor="@color/black"
        android:textStyle="bold"/>

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/_8sdp"
        app:layout_constraintTop_toBottomOf="@id/contact_name">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/call_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_call"
            android:text="@string/call"
            android:textColor="#FC955353"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/text_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_message"
            android:text="@string/text"
            android:textColor="#FC955353"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/video_btn"
            android:layout_width="@dimen/_100sdp"
            android:layout_height="match_parent"
            android:backgroundTint="@color/white"
            android:drawableTop="@drawable/ic_videocam"
            android:text="@string/video"
            android:textColor="#FC955353"/>


    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_250sdp"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/btn_layout"
        android:backgroundTint="#81CCA8A8"
        app:cardCornerRadius="@dimen/_5sdp"
        app:cardElevation="0dp"
        android:layout_margin="@dimen/_10sdp">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/contact_info"
            android:layout_margin="@dimen/_8sdp"
            android:textColor="@color/black"
            android:textSize="@dimen/_18ssp"/>

       <LinearLayout
           android:id="@+id/call_layout"
           android:layout_width="match_parent"
           android:layout_height="@dimen/_50sdp"
           android:layout_marginTop="@dimen/_40sdp"
           android:orientation="horizontal">

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/call_btn2"
               android:layout_width="@dimen/_30sdp"
               android:layout_height="@dimen/_30sdp"
               android:layout_gravity="center_vertical"
               android:layout_marginStart="@dimen/_8sdp"
               android:focusable="true"
               android:clickable="true"
               android:src="@drawable/ic_call_2"
               tools:backgroundTint="@color/black" />

           <androidx.appcompat.widget.AppCompatTextView
               android:id="@+id/contact_number"
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               tools:text="01157277021"
               android:layout_marginStart="@dimen/_18sdp"
               android:textSize="@dimen/_15ssp"
               android:clickable="true"
               android:focusable="true"
               android:layout_gravity="center_vertical"
               android:textColor="#DD321B1B"/>

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/text_btn2"
               android:layout_width="@dimen/_28sdp"
               android:layout_height="@dimen/_28sdp"
               android:layout_marginStart="@dimen/_70sdp"
               android:clickable="true"
               android:layout_gravity="center_vertical"
               android:focusable="true"
               android:src="@drawable/ic_message_2"
               tools:backgroundTint="@color/black" />

           <androidx.appcompat.widget.AppCompatImageView
               android:id="@+id/video_btn2"
               android:layout_width="wrap_content"
               android:layout_height="@dimen/_30sdp"
               android:layout_gravity="center_vertical"
               android:layout_marginStart="@dimen/_8sdp"
               android:clickable="true"
               android:focusable="true"
               android:src="@drawable/ic_videocam_2"
               tools:backgroundTint="@color/black" />


       </LinearLayout>

        <LinearLayout
            android:id="@+id/whatsapp_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_marginTop="@dimen/_115sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:src="@drawable/whatsapp"
                tools:backgroundTint="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/_16sdp"
                android:text="Message"
                android:textColor="#DD321B1B"
                android:textSize="@dimen/_16ssp" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contact_number_whatsapp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01157277021"
                android:layout_marginStart="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:layout_gravity="center_vertical"
                android:textColor="#DD321B1B"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/telegram_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="@dimen/_160sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:src="@drawable/telegram"
                tools:backgroundTint="@color/black" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message_telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message"
                android:layout_marginStart="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:layout_gravity="center_vertical"
                android:textColor="#DD321B1B"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contact_number_telegram"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01157277021"
                android:layout_marginStart="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:layout_gravity="center_vertical"
                android:textColor="#DD321B1B"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/messenger_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:focusable="true"
            android:clickable="true"
            android:layout_marginTop="@dimen/_205sdp">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/_30sdp"
                android:layout_height="@dimen/_30sdp"
                android:layout_marginStart="@dimen/_8sdp"
                android:clickable="true"
                android:layout_gravity="center_vertical"
                android:focusable="true"
                android:src="@drawable/messenger"
                tools:backgroundTint="@color/black" />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/message_messenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Message"
                android:layout_marginStart="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:layout_gravity="center_vertical"
                android:textColor="#DD321B1B"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/contact_number_messenger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:text="01157277021"
                android:layout_marginStart="@dimen/_16sdp"
                android:textSize="@dimen/_16ssp"
                android:layout_gravity="center_vertical"
                android:textColor="#DD321B1B"/>

        </LinearLayout>



    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>